grammar.js
    stylesheet: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.property_statement,
        $.container_statement,
        $.use_statement,
        $.forward_statement,
        $.mixin_statement,
        $.include_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.layer_statement,
        $.scope_statement,
        $.starting_style_statement,
        $.view_transition_statement,
        $.font_face_statement,
        $.counter_style_statement,
        $.position_try_statement,
        $.font_palette_values_statement,
        $.page_statement,
        $.font_feature_values_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        $.placeholder,
        $.sassdoc_block,
        $.sassdoc_delimiter,
      ),

    // Statements

    parameters: ($) =>
      seq(
        "(",
        choice(
          // Only regular parameters, or…
          sep(",", $.parameter),
          // …one or more parameters followed by a rest parameter, or…
          seq(sep1(",", $.parameter), ",", $.rest_parameter),
          // …a lone rest parameter.
          $.rest_parameter,
        ),
        ")",
      ),

    parameter: ($) =>
      seq(
        alias($._variable_identifier, $.variable_name),
        optional(seq(":", alias($._value, $.default_value))),
      ),

    mixin_statement: ($) =>
      seq(
        "@mixin",
        alias($._identifier, $.name),
        optional($.parameters),
        $.block,
      ),

    function_statement: ($) =>
      seq(
        "@function",
        alias($._identifier, $.name),
        optional($.parameters),
        $.block,
      ),

    return_statement: ($) => seq("@return", $._value, ";"),

    rule_set: ($) => seq($.selectors, $.block),

    selectors: ($) => sep1(",", choice($._selector, $._block_direct_selector)),

    block: ($) =>
      seq(
        "{",
        repeat($._block_item),
        optional(alias($.last_declaration, $.declaration)),
        "}",
      ),

    _block_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.property_statement,
        $.container_statement,
        $.postcss_statement,
        $.mixin_statement,
        $.include_statement,
        $.extend_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.return_statement,
        $.layer_statement,
        $.scope_statement,
        $.starting_style_statement,
        $.view_transition_statement,
        $.font_face_statement,
        $.counter_style_statement,
        $.position_try_statement,
        $.font_palette_values_statement,
        $.page_statement,
        $.font_feature_values_statement,
        $.at_root_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        alias($.content_at_rule, $.at_rule),
        $.placeholder,
      ),

    _block_direct_selector: ($) =>
      choice(
        alias($._block_direct_child_selector, $.child_selector),
        alias($._block_direct_sibling_selector, $.sibling_selector),
        alias(
          $._block_direct_adjacent_sibling_selector,
          $.adjacent_sibling_selector,
        ),
        alias($._child_selector_block_direct, $.child_selector),
        alias($._sibling_selector_block_direct, $.sibling_selector),
        alias(
          $._adjacent_sibling_selector_block_direct,
          $.adjacent_sibling_selector,
        ),
      ),

    _selector: ($) =>
      choice(
        $.universal_selector,
        alias($._identifier_with_interpolation, $.tag_name),
        $.class_selector,
        $.nesting_selector,
        $.pseudo_class_selector,
        $.pseudo_element_selector,
        $.id_selector,
        $.attribute_selector,
        $.string_value,
        $.child_selector,
        $.descendant_selector,
        $.sibling_selector,
        $.adjacent_sibling_selector,
        $.namespace_selector,
        $.interpolation,
      ),

    nesting_selector: (_) => "&",

    universal_selector: (_) => "*",

    placeholder_selector: ($) =>
      prec(
        1,
        seq(
          "%",
          $._no_whitespace,
          alias($._identifier_with_interpolation, $.placeholder_name),
        ),
      ),

    class_selector: ($) =>
      prec(
        1,
        seq(
          optional($._selector),
          choice(seq(".", $._no_whitespace), $.nesting_selector),
          alias($._identifier_with_interpolation, $.class_name),
        ),
      ),

    pseudo_class_selector: ($) =>
      seq(
        optional($._selector),
        alias($._pseudo_class_selector_colon, ":"),
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.class_name),
        optional(alias($.pseudo_class_arguments, $.arguments)),
      ),

    pseudo_element_selector: ($) =>
      seq(
        optional($._selector),
        "::",
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.tag_name),
        optional(alias($.pseudo_element_arguments, $.arguments)),
      ),

    id_selector: ($) =>
      seq(
        optional($._selector),
        "#",
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.id_name),
      ),

    attribute_selector: ($) =>
      seq(
        optional($._selector),
        "[",
        seq(
          alias(
            choice($._identifier_with_interpolation, $.namespace_selector),
            $.attribute_name,
          ),
          optional(seq(choice("=", "~=", "^=", "|=", "*=", "$="), $._value)),
        ),
        "]",
      ),

    child_selector: ($) =>
      prec.left(
        seq(field("left", $._selector), ">", field("right", $._selector)),
      ),

    descendant_selector: ($) =>
      prec.left(
        seq(
          field("left", $._selector),
          $._descendant_operator,
          field("right", $._selector),
        ),
      ),

    sibling_selector: ($) =>
      prec.left(
        seq(field("left", $._selector), "~", field("right", $._selector)),
      ),

    adjacent_sibling_selector: ($) =>
      prec.left(
        seq(field("left", $._selector), "+", field("right", $._selector)),
      ),

    namespace_selector: ($) => prec.left(seq($._selector, "|", $._selector)),

    declaration: ($) =>
      choice(
        // Variable
        seq(
          alias($._variable_identifier, $.variable_name),
          ":",
          $._value,
          repeat(seq(optional(","), $._value)),
          optional(choice($.default, $.global)),
          ";",
        ),

        // Property
        seq(
          alias($._identifier_with_interpolation, $.property_name),
          ":",
          $._value,
          repeat(seq(optional(","), $._value)),
          optional($.important),
          ";",
        ),
      ),

    // Only seems to be used to declare properties and not variables.
    _value: ($) =>
      prec(
        -1,
        choice(
          alias($._identifier_with_interpolation, $.plain_value),
          $.variable_module,
          alias($._variable_identifier, $.variable_value),
          $.boolean_value,
          $.null_value,
          alias($._plain_value, $.plain_value),
          $.color_value,
          $.integer_value,
          $.float_value,
          $.string_value,
          $.grid_value,
          $.binary_expression,
          $.unary_expression,
          $.list_value,
          $.map_value,
          $.parenthesized_value,
          $.call_expression,
          $.attr_expression,
          $.if_expression,
          alias($.nesting_selector, $.nesting_value),
        ),
      ),

    // Since a `url` function allows a greater breadth of unquoted characters
    // than would be allowed in any other context, we need a version of
    // `_value` that is allowed to exist inside of `url`. Lots of these would
    // be nonsensical, but they still compile.
    string_value: ($) =>
      choice($._single_quoted_string_value, $._double_quoted_string_value),

    _single_quoted_string_value: ($) =>
      seq(
        "'",
        repeat(choice($._single_quoted_string_segment, $.interpolation)),
        "'",
      ),

    _double_quoted_string_value: ($) =>
      seq(
        '"',
        repeat(choice($._double_quoted_string_segment, $.interpolation)),
        '"',
      ),

    // Only used in certain places where SCSS will tolerate an unquoted string
    // that would normally be ambiguous, like a URL.
    integer_value: ($) =>
      seq(token(seq(optional(choice("+", "-")), /\d+/)), optional($.unit)),

    float_value: ($) =>
      seq(
        token(
          seq(
            optional(choice("+", "-")),
            /\d*/,
            choice(
              seq(".", /\d+/),
              seq(/[eE]/, optional("-"), /\d+/),
              seq(".", /\d+/, /[eE]/, optional("-"), /\d+/),
            ),
          ),
        ),
        optional($.unit),
      ),

    _expression: ($) => choice($.call_expression, $.binary_expression),

    call_expression: ($) =>
      choice(
        seq(
          field("name", alias("url", $.function_name)),
          field("arguments", alias($.arguments_for_url, $.arguments)),
        ),
        seq(
          field("name", alias("if", $.function_name)),
          field("arguments", $.arguments),
        ),
        seq(
          optional(
            seq(
              field("module", alias($._identifier, $.module)),
              token.immediate("."),
              $._no_whitespace,
            ),
          ),
          field("name", alias($._identifier, $.function_name)),
          field("arguments", $.arguments),
        ),
      ),

    // CSS attr() function
    arguments: ($) =>
      seq(
        token.immediate("("),
        choice(
          // Only regular values, or…
          sep(choice(",", ";"), $.argument),
          // one or more arguments followed by a rest argument, or…
          seq(sep1(choice(",", ";"), $.argument), ",", $.rest_argument),
          // …a lone rest argument.
          $.rest_argument,
        ),
        ")",
      ),

    _identifier: (_) => /((--|-?[a-zA-Z_]))([a-zA-Z0-9-_])*/,

    single_line_comment: (_) =>
      token(
        choice(
          seq("//", /[^\/\n]/, /[^\n]*/), // // followed by non-slash content
          "//", // bare // (empty comment)
        ),
      ),

    // //// delimiter: a visual separator used in sassdoc sections.
    // Parsed as a top-level item so it breaks sassdoc_block boundaries
    // (not an extra, which would be consumed inside repeat1(sassdoc_line)).
    // Also matches ///// and beyond.
    // Visible node (no underscore prefix) so it can be targeted by highlight queries.
    sassdoc_delimiter: (_) => token(seq("////", /[^\n]*/)),

    // A sassdoc block is one or more consecutive /// lines. It is a top-level
    // item that wraps individual sassdoc_line nodes. Neovim injects the entire
    // block (contiguous range) into the sassdoc parser, while ast-grep matches
    // individual sassdoc_line children for its injection mechanism.
    sassdoc_block: ($) => prec.right(repeat1($.sassdoc_line)),

    // Individual /// comment line. Composed of:
    // - _sassdoc_marker: the /// prefix (external scanner, hidden)
    // - sassdoc_content: the rest of the line after /// (external scanner)
    // The sassdoc_content child is what ast-grep's $CONTENT binds to for injection.
    sassdoc_line: ($) => seq($._sassdoc_marker, optional($.sassdoc_content)),

    // sassdoc_content is the text after /// up to end of line.
    // Handled by external scanner.

    interpolation: ($) => seq("#{", choice($._value, $._expression), "}"),

    _identifier_with_interpolation: ($) =>
      prec.left(
        1,
        repeat1(choice($._identifier, $.interpolation, token(/-+/))),
      ),
